<resources>
    <string name="app_name">Project3Quiz</string>
    <string name="_1_please_enter_name">1. If I say knock knock, you say...</string>
    <string name="whosThere">Whos there</string>
    <string name="whosThere2">whos there</string>
    <string name="whosThere3">who\'s there</string>
    <string name="whosThere_">Who\'s there</string>
    <string name="name">Name</string>
    <string name="_2_what_is_the_meaning_to_life_the_universe_and_everything">2. What is the meaning to life, the universe and everything?</string>
    <string name="a_guide_for_hitchhikers">A guide for HitchHikers</string>
    <string name="_42">42</string>
    <string name="marvin">Marvin</string>
    <string name="_3_f_x_walks_into_a_bar_the_barmen_says">3. f(x) walks into a bar. The barmen says?</string>
    <string name="why_the_long_face">Why the long face</string>
    <string name="i_think_my_numbers_up">I think my numbers up</string>
    <string name="we_don_t_do_functions">We don\'t do functions</string>
    <string name="_4_why_can_t_you_trust_atoms">4. Why can\'t you trust atoms?</string>
    <string name="should_you_really_trust_anyone">Should you really trust anyone</string>
    <string name="prof_hawking_said_so">Prof Hawking said so</string>
    <string name="they_make_up_everything">They make up everything</string>
    <string name="_5_what_do_you_think_of_udacity">5. What do you think of Udacity</string>
    <string name="great">Great</string>
    <string name="brilliant">Brilliant</string>
    <string name="amazing">Amazing</string>
    <string name="on_fleek">On Fleek</string>
    <string name="_6_two_trains_travel_in_different_directions_for_10_mins_each_train_has_a_velocity_of_90mph_wind_speed_is_5knots_nw_find_x">6. Two trains travel in different directions for 10 mins. Each train has a velocity of 90mph. Wind speed is 5knots NW. Find X</string>
    <string name="i_don_t_have_a_map">I don\'t have a map</string>
    <string name="x_shh_i_m_hiding">X (Shh I\'m hiding)</string>
    <string name="i_took_the_replacement_bus_service">I took the replacement bus service</string>
    <string name="submit_not_in_a_50_shades_way">Submit (not in a 50 shades way)</string>
    <string name="and_finally">And Finally</string>
    <string name="what_did_you_think_of_this_quiz">What did you think of this quiz?</string>
    <string name="like_a_broken_pencil_pointless">Like a broken pencil, pointless</string>
    <string name="the_best_thing_since_unsliced_bread">The best thing since unsliced bread.</string>
    <string name="i_ll_never_be_getting_this_time_back">I\'ll never be getting this time back.</string>
    <string name="my_life_is_complete_now">My life is complete now.</string>
    <string name="why_are_you_still_scrolling">Why are you still scrolling?</string>
    <string name="ok_one_more">Ok, one more</string>
    <string name="am_i_going_to_get_to_stage_2">Am I going to get to stage 2?</string>
    <string name="not_likely_fella">Not likely fella</string>
    <string name="the_possibility_is_possible">The possibility is possible</string>
    <string name="it_s_a_sure_thing">It\'s a sure thing</string>
    <string name="your_degree_is_in_the_post">Your degree is in the post</string>
    <string name="your_score_is">Your score is</string>
    <string name="thank_you">Thank you!</string>
    <string name="thanks">Thank you!</string>
    <string name="really">Really?</string>
    <string name="NAME">NAME</string>
    <string name="Name">Name</string>
    <string name="namee">name</string>
    <string name="fortytwo">42</string>
    <string name="We_dont_do_functions">We don\'t do functions</string>
    <string name="They_make_up_everything">They make up everything</string>
    <string name="Shh">X (Shh I\'m hiding)</string>
    <string name="Well_thats">Well that\'s not very nice.</string>
    <string name="Stop">Stop trying to butter me up.</string>
    <string name="When_was">When was the last time you got time back.</string>
    <string name="May_i">May I suggest finding a hobby.</string>
    <string name="Thanks_for_the_support">Thanks for the support.</string>
    <string name="Yoda">Who are you Yoda?.</string>
    <string name="Hope">I hope so.</string>
    <string name="Post_man">That\'s a nice post man.</string>
    <string name="not_as_good_as_udemy">Not as good as Udemy</string>
    <string name="not_very_good">Not very good</string>
    <string name="your_score_is_" />
    <string name="entertext">Enter text here</string>
    <string name="_5_select_two_positive_words">5. Select two positive words</string>
    <string name="discombobulated">Discombobulated</string>
    <string name="bewildered">bewildered</string>
</resources>
